code/services/named-port.yaml
apiVersion: v1
kind: Pod
metadata:
  name: named-port-pod
spec:
  containers:
    - name: echoserver
      image: gcr.io/google_containers/echoserver:1.4
      imagePullPolicy: IfNotPresent
      ports:
        - name: pod-custom-port
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: named-port-svc
spec:
  ports:
    - port: 80
      targetPort: pod-custom-port
