code/services/service-clusterip-external.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jenkins-service
subsets:
  - addresses:
      - ip: 172.30.90.221
    ports:
      - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
