code/services/service-clusterip-fixed.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  clusterIP: 10.0.162.149
  ports:
  - name: mysql
    port: 3306
