code/services/service-clusterip-headless-selectors.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  clusterIP: None
  selector:
    inservice: myservice
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
