code/services/service-externalname-redirect.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-refer1
  namespace: my-namespace
spec:
  type: ExternalName
  externalName: myservice.default.svc.cluster.local
