code/services/service-externalname-redirect2_draft.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: service-refer2
  namespace: my-namespace
subsets:
  - addresses:
      - ip: 10.103.154.95 # ERROR: service ip doesn't work
    ports:
      - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-refer2
  namespace: my-namespace
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
