code/services/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  type: LoadBalancer
  selector:
    inservice: myservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
