code/services/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  type: NodePort
  selector:
    inservice: myservice
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
